# uFVM2d

./: CMakeLists.txt  untitled
input/: test.msh  test4.msh  untitled.geo
lib/lis/: lis.lib  lis_c.lib
source/cpp/: BoundaryCondition.cpp  Data.cpp  Edge.cpp  EdgeDataHandler.cpp  Face.cpp  FaceDataHandler.cpp  Geometry.cpp  PhysicalGroup.cpp  PoissonSolver.cpp  Solution.cpp  Vector.cpp  Vertex.cpp  main.cpp
source/hpp/: BoundaryCondition.hpp  Data.hpp  Edge.hpp  EdgeDataHandler.hpp  Face.hpp  FaceDataHandler.hpp  Geometry.hpp  PhysicalGroup.hpp  PoissonSolver.hpp  Preprocessor.hpp  Solution.hpp  Vector.hpp
